# ros2_ws

./: .gitignore  DEPLOYMENT.md  Dockerfile.web  README.md  Testing.md  WEB-QUICKSTART.md  docker-compose.web.yaml  docker-compose.yaml  dockerfile  nginx-site.conf  nginx.conf  thoughts.md
confs/: udp_client_config  udp_client_enemy_config
new_ros/launch/: carla_sim_launch.xml  carla_sim_launch_enemy.xml  gps_sim_launch.xml  gps_sim_launch_enemy.xml
new_ros/src/tp5_ros/: package.xml
new_ros/src/tp5_ros/launch/: gps_sim_launch_enemy.xml  vesc_gps_sim_launch.xml
new_ros/src/tp5_ros/src/: gps_pub_sim.cpp  my_node.cpp  my_node_carla.cpp  serial_publisher.cpp  udp_to_pub.cpp
new_ros/tp5_ros/: CMakeLists.txt  package.xml
new_ros/tp5_ros/launch/: carla_sim_launch.xml  gps_sim_launch.xml
new_ros/tp5_ros/src/: enemy_node.cpp  gps_pub_sim.cpp  my_node.cpp  my_node_carla.cpp  udp_client_config  udp_client_enemy_config  udp_to_pub.cpp
src/car_to_backend/: CMakeLists.txt  package.xml
src/car_to_backend/src/: .gitignore  car_controls.cpp  combined.cpp  controls_from_udp.cpp  controls_to_serial.cpp  gps_publisher.cpp  publisher_from_serial.cpp  serial_read_config  serial_write_config  subscriber_to_udp.cpp  udp_client_config  udp_server_config
web/: README.md  index.html  package.json  package.json.example
